--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,11 @@
-version: '3.1'
+version: '3'
 
 services:
-
-  web:
-    image: nginx
-    depends_on:
-      - php
-    ports:
-      - 8030:80
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - app:/app
-    restart: always 
-    
-  php:
-    build: .
-    depends_on:
-      - db
-    environment:
-      SERVICE_NAME: app
-      SERVICE_TAGS: dev
-      DB_HOST: db
-      DB_DATABASE: docker
-      DB_USERNAME: docker
-      DB_PASSWORD: docker
-    expose:
-      - 9000
-    volumes:
-      - app:/app
-    restart: always
-
   db:
     image: mariadb
     restart: always
+    ports:
+      - "3308:3306"
     volumes:
       - db:/var/lib/mysql
     environment:
@@ -41,7 +14,40 @@ services:
       MYSQL_DATABASE: docker
       MYSQL_ROOT_PASSWORD: docker
 
-volumes:
-  app:
-  db:
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    environment: 
+      PMA_HOST: db
+      PMA_PORT: 3306
+      PMA_USER: docker
+      PMA_PASSWORD: docker
+    ports:
+      - "81:80"
+    depends_on:
+      - db
 
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        uid: ${UID:-1000}
+    working_dir: /var/www/html
+    environment:
+      SERVICE_NAME: app
+      SERVICE_TAGS: dev
+      DB_HOST: db
+      DB_DATABASE: docker
+      DB_USERNAME: docker
+      DB_PASSWORD: docker
+      APACHE_RUN_USER: ${UID:-testuser}
+      APACHE_RUN_GROUP: ${UID:-www-data}
+    ports:
+      - "8011:80"
+    volumes:
+      - .:/var/www/html
+    depends_on:
+      - db
+
+volumes: 
+  db:
